--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,10 @@
             "Tests\\": "tests/"
         }
     },
+    "post-install-cmd": [
+        "php artisan clear-compiled",
+        "chmod -R 777 public/"
+    ],
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
